public/stylesheets/store.css
/* ... */
.element > input, .element select, .label > input, .label select, .label-and-element > input, .label-and-element select, .cancel-submit > input, .cancel-submit select {
  display: block;
  font-family: "Arial", sans-serif;
  letter-spacing: normal;
  word-spacing: normal;
  text-align: left; }

.double.element {
  text-align: left; }
  .double.element select {
    width: 48%;
    display: inline;
    margin-right: 2%; }
  .double.element input {
    width: 48%;
    display: inline;
    margin-right: 2%; }
    .double.element input:last-child {
      margin-right: 0; }
  .double.element .form-error {
    width: 48%;
    margin-right: 2%;
    float: left; }

.paired.element input, .paired.element select {
  float: left;
  width: 75%; }
.paired.element .half {
  float: left;
  width: 37.5%; }
.paired.element input.half {
  border-left: none; }
.paired.element .description {
  float: left; }
.paired.element input[type=submit], .paired.element input[type=button] {
  width: 25%;
  text-align: center;
  margin: 7px 0 6px;
  border-left: none;
  -moz-border-radius: 0 4px 4px 0;
  -webkit-border-radius: 0 4px 4px 0;
  border-radius: 0 4px 4px 0; }

.single_field {
  margin-top: 10px; }
  .single_field .element input {
    width: 100%; }
  .single_field .submit input {
    width: 100%;
    border-left: none;
    -moz-border-radius: 0 4px 4px 0;
    -webkit-border-radius: 0 4px 4px 0;
    border-radius: 0 4px 4px 0; }

.code textarea {
  height: 16em; }

.hidden-target {
  display: none; }

.cancel-submit {
  margin: 12px 0 0; }
  .cancel-submit a {
    display: block;
    font-family: "Arial", sans-serif;
    letter-spacing: normal;
    word-spacing: normal;
    text-align: left;
    -moz-border-radius: 4px 0 0 4px;
    -webkit-border-radius: 4px 0 0 4px;
    border-radius: 4px 0 0 4px;
    float: left;
    font-size: 0.75em;
    line-height: 14px;
    border: 1px solid;
    border-color: #dddddd #bbbbbb #999999;
    border-right: none;
    background: #eeeeee;
    color: #999999;
    padding: 3px 10px 4px; }
    .cancel-submit a:after {
      content: ".";
      display: block;
      height: 0;
      clear: both;
      visibility: hidden; }
  .cancel-submit input[type="submit"] {
    padding-left: 3em;
    padding-right: 3em;
    -moz-border-radius: 0 4px 4px 0;
    -webkit-border-radius: 0 4px 4px 0;
    border-radius: 0 4px 4px 0; }

input, textarea {
  color: black; }

.placeholder {
  color: #aaaaaa; }

form.jeditable input {
  padding: 1px 0; }
form.jeditable button {
  -moz-border-radius: 0 4px 4px 0;
  -webkit-border-radius: 0 4px 4px 0;
  border-radius: 0 4px 4px 0;
  border-left: none;
  display: block;
  float: right;
  padding: 3px 10px; }

.ui-timepicker-div .ui-widget-header {
  margin-bottom: 8px; }
.ui-timepicker-div dl {
  text-align: left; }
.ui-timepicker-div dl dt {
  height: 25px; }
.ui-timepicker-div dl dd {
  margin: -25px 0 10px 65px; }
.ui-timepicker-div td {
  font-size: 90%; }

.radio-list li .radio {
  text-align: center;
  display: inline-block;
  width: 36px; }

.flash {
  display: block;
  font-family: "Arial", sans-serif;
  letter-spacing: normal;
  word-spacing: normal;
  text-align: left;
  -moz-border-radius: 4px 4px 4px 4px;
  -webkit-border-radius: 4px 4px 4px 4px;
  border-radius: 4px 4px 4px 4px;
  color: white;
  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3);
  padding: 12px;
  margin: 0 12px 12px;
  line-height: 12px; }
  .flash:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
  .flash .close {
    margin-left: 12px;
    float: right;
    cursor: pointer; }
  .flash p {
    color: rgba(255, 255, 255, 0.97) !important; }
  .flash ul li {
    display: block;
    font-family: "Arial", sans-serif;
    letter-spacing: normal;
    word-spacing: normal;
    text-align: left; }
    .flash ul li:after {
      content: ".";
      display: block;
      height: 0;
      clear: both;
      visibility: hidden; }

.error, .warning {
  background: #fb572c;
  background: -moz-linear-gradient(top, #fb572c 0%, #f03504 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fb572c), color-stop(100%, #f03504));
  background-image: -khtml-gradient(linear, left top, left bottom, from(#fb572c), to(#f03504));
  background-image: -moz-linear-gradient(top, #fb572c, #f03504);
  background-image: -ms-linear-gradient(top, #fb572c, #f03504);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fb572c), color-stop(100%, #f03504));
  background-image: -webkit-linear-gradient(top, #fb572c, #f03504);
  background-image: -o-linear-gradient(top, #fb572c, #f03504);
  background-image: linear-gradient(top, #fb572c, #f03504); }

.notice, .info, .success {
  background: #0a99b3;
  background: -moz-linear-gradient(top, #0a99b3 0%, #077083 100%);
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0a99b3), color-stop(100%, #077083));
  background-image: -khtml-gradient(linear, left top, left bottom, from(#0a99b3), to(#077083));
  background-image: -moz-linear-gradient(top, #0a99b3, #077083);
  background-image: -ms-linear-gradient(top, #0a99b3, #077083);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #0a99b3), color-stop(100%, #077083));
  background-image: -webkit-linear-gradient(top, #0a99b3, #077083);
  background-image: -o-linear-gradient(top, #0a99b3, #077083);
  background-image: linear-gradient(top, #0a99b3, #077083); }

body {
  font-size: 11pt;
  font-family: sans-serif; }

a {
  color: #077083;
  text-decoration: none; }

h1, h2, h3, h4 {
  display: block;
  font-family: "Arial", sans-serif;
  letter-spacing: normal;
  word-spacing: normal;
  text-align: left; }
  h1:after, h2:after, h3:after, h4:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden; }
/* ... */

